# lazygit-llm-commit-generator

./: .gitattributes  .gitignore  CLAUDE.md  MANIFEST.in  README.md  generate-commit-message-verbose.sh  generate-commit-message-with-feedback.sh  generate-commit-message.sh  install.py  lazygit-llm-generate  lazygit-llm-wrapper.sh  network_check.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_packaging.sh  validate_system.py  verify_packaging.py
.github/: CICD_FIX_SUMMARY.md  README.md  pull_request_template.md
.github/workflows/: ci.yml  code-quality.yml  pull-request.yml  test.yml
.specs/: design.md  requirements.md  tasks.md
config/: config.yml.example
docs/: API_REFERENCE.md  ARCHITECTURE_REFACTORED.md  COMPREHENSIVE_API_REFERENCE.md  DEVELOPMENT.md  LAZYGIT_INTEGRATION_AND_TESTING.md  MIGRATION_GUIDE.md  PROVIDER_IMPLEMENTATION_GUIDE.md  README_DOCS.md  SECURITY_AND_ERROR_HANDLING.md  USER_GUIDE.md  api_reference.md  configuration.md  development.md  installation.md
lazygit-llm/: README_TESTING.md  pytest.ini
lazygit-llm/config/: config-refactored.yml  config.yml  config.yml.example
lazygit-llm/lazygit_llm/: __init__.py  base_provider.py  config_manager.py  error_classifier.py  error_handler.py  git_processor.py  main.py  message_formatter.py  provider_factory.py  security_validator.py
lazygit-llm/lazygit_llm/api_providers/: __init__.py
lazygit-llm/lazygit_llm/cli_providers/: __init__.py  claude_code_provider.py  gemini_cli_provider.py  gemini_direct_cli_provider.py  gemini_direct_cli_provider_refactored.py  gemini_native_cli_provider.py
lazygit-llm/src/: __init__.py  base_provider.py  config_manager.py  error_handler.py  git_processor.py  main.py  message_formatter.py  provider_factory.py  security_validator.py
lazygit-llm/src/api_providers/: __init__.py  anthropic_provider.py  gemini_api_provider.py  openai_provider.py
lazygit-llm/src/cli_providers/: __init__.py  claude_code_provider.py  gemini_cli_provider.py
lazygit-llm/tests/: __init__.py  conftest.py  test_message_formatter.py
tests/: conftest.py  test_anthropic_provider.py  test_claude_code_provider.py  test_config_manager.py  test_error_classifier.py  test_error_handler.py  test_gemini_api_provider.py  test_gemini_cli_provider.py  test_gemini_direct_cli_provider.py  test_git_processor.py  test_main.py  test_message_formatter.py  test_openai_provider.py  test_provider_factory.py  test_security_validator.py  test_wrapper_script.py
tests/integration/: __init__.py  test_end_to_end.py  test_lazygit_integration.py  test_provider_compatibility.py
tests/performance/: __init__.py  test_performance.py
