[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazygit-llm-commit-generator"
version = "1.0.0"
description = "LLM-powered commit message generator for LazyGit"
authors = [
    { name = "LazyGit LLM Team" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["git", "lazygit", "llm", "commit-message", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "PyYAML>=6.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/yohi/lazygit-llm-commit-generator"
Repository = "https://github.com/yohi/lazygit-llm-commit-generator"
Issues = "https://github.com/yohi/lazygit-llm-commit-generator/issues"

[project.scripts]
lazygit-llm-generate = "lazygit_llm.main:main"

[tool.hatch.build.targets.wheel]
packages = ["lazygit-llm/lazygit_llm"]

[tool.hatch.build.targets.sdist]
include = [
    "lazygit-llm/",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["lazygit-llm/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
    "slow: Slow running tests",
]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-v"
]

[tool.coverage.run]
source = ["lazygit-llm/lazygit_llm"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "openai.*",
    "anthropic.*",
    "google.generativeai.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg-info",
]